# shopping-agent

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  lint.py  pyproject.toml  ruff.toml
backend/app/: config.py  main.py
backend/app/agents/: analysis_agent.py  orchestrator.py  recommender_agent.py  search_agent.py
backend/app/api/: routes.py
backend/app/models/: request.py  response.py
backend/app/services/: openai_client.py  tavily_client.py
backend/tests/: test_health.py
frontend/: .gitignore  components.json  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/chat/: AgentStatusStream.tsx  ChatInput.tsx  MessageBubble.tsx
frontend/src/components/layout/: AgentTimeline.tsx  Header.tsx
frontend/src/components/products/: CompareTable.tsx  ProductCard.tsx  ProductGrid.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/hooks/: useShoppingStream.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
