[project]
name = "shopping-assistant-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.54",
    "tavily-python>=0.5",
    "httpx>=0.27",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["tavily", "tavily.*"]
ignore_missing_imports = true
